--- a/release-notes.html
+++ b/release-notes.html
@@ -65,85 +65,30 @@ supported through SCIM and SPML</p>
 </ol>
 <h2>New Features In This Release</h2>
 <ul>
+    <li>Merge multiple user profiles</li>
 
- <li>Identity Bridge</li>
-  
-  <p>WSO2 Identity Server 5.1.0 is capable of translating between heterogeneous authentication protocols and transforming 
-  and mediating any identity assertion, between SAML2.0, OAuth 1.0a/2.0, OpenID, OpenID Connect, WS-Federation Passive. 
-  This leads to seamless integration between internal applications and cloud applications such as Salesforce, Google Apps 
-  and Office 365.</p>
+    <p>In cases where users will have multiple entries in their respective user stores, to avoid requiring multiple
+        logins to an application to obtain a fully privileged view for a single user's details, we now support merging
+        of multiple user profiles.</p>
 
-<li>Multi-option and multi-step authentication</li>
+    <li>Workflow Support for Identity Server</li>
 
-<p>With WSO2 Identity Server 5.1.0, a given service provider (irrespective of the protocol it supports) can select the 
-  login options it wants to present to it users. Authentication can be a mix of two types: Multi-option login and 
-  multi-step login. With multi-option authentication - the user will be presented with a login screen to pick whatever 
-  the authentication mechanism he/she wants (e.g.: Username/password, Social login with Facebook, Login with a 
-  federated Home Identity Provider). A service provider can also choose to have multi-step authentication. 
-  Multi step authentication can naturally be extended to be multi-factor depending on the kind of authentication.</p> 
+    <p>In cases where operations will need to trigger events, (for example, the creation of a user must trigger a
+        role assignment to that user) the administrators of IS now can define workflows for operations. </p>
 
-<li> Request Path Authenticators.</li>
+    <li>XACML cache invalidation notification when changes are made to Identities</li>
 
-<p>The responsibly of getting the user's credentials is left to the service provider, and the credentials will be 
-  attached to the request to the Identity Server. 
+    <p>XACML engine is now able to send invalidation notifications to external endpoints when there is a change in user
+        roles, permissions or attributes as well as clear the internal cache when user roles, permissions or attributes
+        been updated</p>
+    <li>PATCH operation support for SCIM 1.1</li>
 
-<li>Social Login with Facebook / Google / Microsoft Windows Live.</li>
+    <p>Previous implementation only supported PUT operation for updates. PUT supports the replace operation but not the
+        update operation. Since group is a heavy resource, the operation that alters without replacement (PATCH) needs
+        to be implemented. If not each time a new user is added to the group, all the users should be sent in the PUT
+        request.</p>
 
-<p>Facebook / Google / Microsoft Windows Live authenticators are the very first authenticators we are shipping with 
-  Identity Server 5.1.0 for social login.</p> 
-
-<li>Ability to plug-in custom developed authenticators.</li>
-
-<p>Owing to the power of OSGi, custom authenticators can be easily written and put into the Identity Server which 
-  will pick them dynamically and execute. The UI will also be extended with property fields for administrators to 
-  configure the authenticators if they are federated authenticators</p>
-
-<li>Provisioning Bridge.</li>
-
-<p>WSO2 Identity Server 5.1.0 is capable of accepting inbound provisioning requests based on SOAP or SCIM, 
-  provisioning to the Resident Identity Provider using LDAP, Active Directory, JDBC or Carbon Remote UserStoreManagement 
-  user management APIs, and transform them to outbound provisioning requests based on SCIM, SPML 2.0, Salesforce, 
-  Google Apps provisioning APIs.</p>
-
-<li>Just-in-time provisioning.</li>
-
-<p>In the process of federated login WSO2 Identity Server is capable of provisioning the corresponding subject to a 
-  preferred user store domain as well as other configured Identity Providers.</p>
-
-<li>Ability to plug-in custom developed provisioning connectors.</li>
-
-<p>Like with authenticators provisioning connectors also can be added to the system by implementing the relevant 
-  APIs and dropping them to the system as OSGi bundles.</p>
-  
-<li>User Dashboard.</li>
-
-<p>WSO2 Identity Server 5.1.0 ships with a jaggery based user dashboard to expose end user functionality. 
-  This dashboard is completely decoupled from the management console, and is completely extensible due to the fact that 
-  it is able to render gadgets. The application can run from within IS or as a separate jaggery app on AS.</p>
-
-<li>SAML2 Web SSO profile Request / Response validator.</li>
-
-<p>A UI based tool in the Identity Server 5.1.0 management console for debugging the SAML2 Web SSO requests and responses.</p>
-
-<li>Remote User Store Management.</li>
-
-<p>WSO2 Carbon's User/Group Administration SOAP API is also now supported as part of the UserStoreManager 
-  implementations shipped by default. This means heterogeneous user stores distributed across different data centers 
-  can be managed from a single Identity Server node.</p>
-
-<li>Custom permissions.</li>
-
-<p>Application specific permissions can be added by service providers and assigned to roles, and by using the 
-  remote authorization API do permission based access control for users.</p>
-
-<li>Encrypted SAML2 Assertions.</li>
-
-<p>The SAML2 assertion issued for SAML2 based SSO login can now have encrypted assertions. To decrypt the assertion 
-  the service provider will have to have the Identity Server tenant's public certificate.</p>
-
-<li>NTLM grant type for OAuth 2.0</li>
-
-
+    <li>Renewed support for bearer type SAML 2.0 token</li>
 </ul>
 
 <h2>Key Features of @product.name@</h2>
@@ -166,6 +111,20 @@ supported through SCIM and SPML</p>
 	<li>Claim Management</li>
 	<li>User Profiles and Profile Management</li>
 	<li>Separable front-end and back-end - a single front-end server can be used to administer several back-end servers</li>
+    <li>Identity Bridge</li>
+    <li>Multi-option and multi-step authentication</li>
+    <li> Request Path Authenticators.</li>
+    <li>Social Login with Facebook / Google / Microsoft Windows Live.</li>
+    <li>Ability to plug-in custom developed authenticators.</li>
+    <li>Provisioning Bridge.</li>
+    <li>Just-in-time provisioning.</li>
+    <li>Ability to plug-in custom developed provisioning connectors.</li>
+    <li>User Dashboard.</li>
+    <li>SAML2 Web SSO profile Request / Response validator.</li>
+    <li>Remote User Store Management.</li>
+    <li>Custom permissions.</li>
+    <li>Encrypted SAML2 Assertions.</li>
+    <li>NTLM grant type for OAuth 2.0</li>
 </ul>
 <h2>Issues Fixed in This Release</h2>
 <p>
