--- a/release-notes.html
+++ b/release-notes.html
@@ -76,20 +76,21 @@
 
     <li>Workflow Support for Identity Server</li>
 
-    <p>In cases where operations will need to trigger events, (for example, the creation of a user must trigger a
-        role assignment to that user) the administrators of IS now can define workflows for operations. </p>
+    <p>WSO2 IS 5.1.0 now supports user store operations to engage with workflows. Administrators will be able select
+        at which levels each operation should be approved before they get executed. This will be available as a
+        optional feature where administrator will be able to select if to use them on their user store operations or not. </p>
 
     <li>XACML cache invalidation notification when changes are made to Identities</li>
 
-    <p>XACML engine is now able to send invalidation notifications to external endpoints when there is a change in user
+    <p>@product.name@ is now able to send invalidation notifications to external endpoints when there is a change in user
         roles, permissions or attributes as well as clear the internal cache when user roles, permissions or attributes
         been updated</p>
+
     <li>PATCH operation support for SCIM 1.1</li>
 
-    <p>Previous implementation only supported PUT operation for updates. PUT supports the replace operation but not the
-        update operation. Since group is a heavy resource, the operation that alters without replacement (PATCH) needs
-        to be implemented. If not each time a new user is added to the group, all the users should be sent in the PUT
-        request.</p>
+    <p>PUT supports the replace operation but not the update operation. Since group is a heavy resource, the
+       operation that alters without replacement (PATCH) needs to be implemented. If not each time a new user is
+       added to the group, all the users should be sent in the PUT request.</p>
 
     <li>Renewed support for bearer type SAML 2.0 token</li>
 </ul>
@@ -114,9 +115,7 @@
     </li>
     <li>Claim Management</li>
     <li>User Profiles and Profile Management</li>
-    <li>Separable front-end and back-end - a single front-end server can be used to administer several back-end
-        servers
-    </li>
+    <li>Separable front-end and back-end - a single front-end server can be used to administer several back-endservers</li>
     <li>Identity Bridge</li>
     <li>Multi-option and multi-step authentication</li>
     <li> Request Path Authenticators.</li>
