Removing reference to INSTALL.txt

--- a/release-notes.html
+++ b/release-notes.html
@@ -61,9 +61,7 @@
     <li>Go to the bin directory in the extracted folder</li>
     <li>Run the wso2server.sh or wso2server.bat as appropriate</li>
     <li>If you need to start the OSGi console with the server use the property
-        -DosgiConsole when starting the server. The INSTALL.txt file found on the
-        installation directory will give you a comprehensive set of options and
-        properties that can be passed into the startup script
+        -DosgiConsole when starting the server.
     </li>
 </ol>
 <h2>New Features In This Release</h2>
