updating release notes, license and un-used poms
Conflicts:
	pom.xml

--- a/release-notes.html
+++ b/release-notes.html
@@ -25,7 +25,7 @@
 
 <h3>@product.name@ v@product.version@ Release Note</h3>
 
-<h3>@timestamp@</h3>
+<h3>18 December 2015</h3>
 
 <p>
     The @product.name@ team is pleased to announce the release of version @product.version@ of
@@ -123,7 +123,7 @@
     <li>XACML 3.0/2.0 based Entitlement Engine with WS-XACML support</li>
     <li>OAuth 2.0/1.0a Authorization Server with OAuth 2.0/1.0a support</li>
     <li>Inbound and Outbound Identity Provisioning with SCIM 1.1</li>
-    <li>Outbound Identiy Provisioning with SPML 2.0, Salesforce and GoogleApps</li>
+    <li>Outbound Identity Provisioning with SPML 2.0, Salesforce and GoogleApps</li>
     <li>Integrated Windows Authentication and webSEAL authentication</li>
     <li>Multi-option and multi-step (multi-factor) authentication</li>
     <li>Claim based Security Token Service(STS) with SAML 2.0/1.1 support.</li>
@@ -214,8 +214,7 @@
 
 <p>For more information about WSO2 Identity Server, please see <a
         href="http://wso2.com/products/identity-server">http://wso2.com/products/identity-server</a> or visit
-    the <a href="http://wso2.org/library">WSO2 Oxygen Tank</a> developer portal for addition
-    resources.</p>
+    the <a href="http://wso2.org/library">WSO2 Oxygen Tank</a> developer portal for additional resources.</p>
 
 <p>Thank you for your interest in @product.name@.</p>
 
