--- a/modules/styles/product/src/main/resources/web/product/about.html
+++ b/modules/styles/product/src/main/resources/web/product/about.html
@@ -30,7 +30,7 @@
 <p>WSO2 Identity Server is an open source Identity Management and Entitlement Server which is based on
     identity and security standards and specifications.</p>
 
-<p>WSO2 Identity Server is an open source Identity and Entitlement management server. It supports a wide array of authentication
+<p>WSO2 Identity Server is an open source Identity and Entitlement management server. It supports wide array of authentication
 protocols such as SAML 2.0 Web SSO, OpenID, OAuth 2.0/1.0a, OpenID Connect and WS-Federation Passive.
 It supports role based authorization and fined grained authorization with XACML 2.0/3.0 while inbound/outbound provisioning is
 supported through SCIM and SPML. It supports heterogeneous user stores including different LDAP implementations,
@@ -92,10 +92,6 @@ It is equipped with a set of identity provider features including OpenID, OAuth,
         Data Services Server</a></li>
     <li><a href="http://wso2.com/products/business-activity-monitor/">WSO2
         Business Activity Monitor</a></li>
-    <li><a href="http://wso2.com/products/gadget-server/">WSO2
-        Gadget Server</a></li>
-    <li><a href="http://wso2.com/products/mashup-server/">WSO2
-        Mashup Server</a></li>
     <li><a href="http://wso2.com/products/business-rules-server/">WSO2
         Business Rules Server</a></li>
 </ul>
@@ -165,13 +161,13 @@ It is equipped with a set of identity provider features including OpenID, OAuth,
 
 <h3>Need more help?</h3>
 <ul>
-    <li><a href="http://wso2.org/project/registry/4.0.0/docs/index.html">Online Documentation</a>
+    <li><a href="https://docs.wso2.com/display/IS520/WSO2+Identity+Server+Documentation">Online Documentation</a>
     </li>
     <li><a href="http://wso2.org/library/identity-server">Read articles</a></li>
     <li><a href="http://wso2.org/forum/308">Post to the forum</a></li>
     <li><a href="http://wso2.org/mail">Subscribe to the mailing list</a></li>
     <li><a href="http://wso2.org/jira/browse/CARBON">Report an Issue</a></li>
-    <li><a href="http://wso2.com/services/">Get commercial support</a></li>
+    <li><a href="http://wso2.com/support/">Get commercial support</a></li>
 </ul>
 </body>
 </html>
