--- a/release-notes.html
+++ b/release-notes.html
@@ -25,7 +25,7 @@
 
 <h3>@product.name@ v@product.version@ Release Note</h3>
 
-<h3>18 December 2015</h3>
+<h3>12 July 2016</h3>
 
 <p>
     The @product.name@ team is pleased to announce the release of version @product.version@ of
@@ -158,15 +158,15 @@
     fixed in this release can be found at:
 </p>
 <ul>
-    <li><a href="https://wso2.org/jira/issues/?filter=13027">Fixed Issues for WSO2 Identity Server 5.2.0</a></li>
+    <li><a href="https://wso2.org/jira/issues/?filter=13027">Fixed Issues for WSO2 Identity Server 5.2.0-Beta2</a></li>
 </ul>
 <h2>Known Issues</h2>
 
 <p>
-    All the known issues in WSO2 Identity Server 5.2.0 are reported at:
+    All the known issues in WSO2 Identity Server 5.2.0-Beta2 are reported at:
 </p>
 <ul>
-    <li><a href="https://wso2.org/jira/issues/?filter=13028">Known issues in WSO2 Identity Server 5.2.0</a></li>
+    <li><a href="https://wso2.org/jira/issues/?filter=13028">Known issues in WSO2 Identity Server 5.2.0-Beta2</a></li>
 </ul>
 <h2>How You Can Contribute</h2>
 
