--- a/release-notes.html
+++ b/release-notes.html
@@ -150,7 +150,7 @@
     <li>2 factor authentication with FIDO</li>
     <li>OpenID Connect Session Management</li>
     <li>API to get the number (count) of users</li>
-    <li>Support for Microsoft Office 365 ? WS Trust</li>
+    <li>Support for Microsoft Office 365 WS Trust</li>
     <li>SAML2.0 support for WS-Federation Passive</li>
 </ul>
 <h2>Issues Fixed in This Release</h2>
