--- a/release-notes.html
+++ b/release-notes.html
@@ -1,5 +1,5 @@
 <!--
-~ Copyright 2011 WSO2, Inc. (http://wso2.com)
+~ Copyright 2016 WSO2, Inc. (http://wso2.com)
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
@@ -23,27 +23,26 @@
 <body>
 <h1>@product.name@ : An Open Source Identity and Entitlement Management Server</h1>
 
-<h3>@product.name@ v@product.version@ Release Note</h3>
+<h3>@product.name@ v@product.version@ Released !</h3>
 
-<h3>18 December 2015</h3>
+<h3>December 2016</h3>
 
 <p>
-    The @product.name@ team is pleased to announce the release of version @product.version@ of
+    @product.name@ team is pleased to announce the release of version @product.version@ of
     the @product.name@ (IS).
 </p>
 
-<p>@product.name@ is an open source Identity and Entitlement management server. It supports a wide array of
-    authentication
-    protocols such as SAML 2.0 Web SSO, OpenID, OAuth 2.0/1.0a, OpenID Connect and WS-Federation Passive.
-    It supports role based authorization and fined grained authorization with XACML 2.0/3.0 while inbound/outbound
-    provisioning is
-    supported through SCIM and SPML</p>
+<p>@product.name@ is an open source Identity and Entitlement Management server. It supports a wide array of
+    authentication protocols such as SAML 2.0 Web SSO, OAuth 2.0/1.0a, OpenID Connect and WS-Federation Passive.
+    It supports role based authorization and fine grained authorization with XACML 2.0/3.0 while
+    inbound/outbound provisioning is supported through SCIM and SPML.
+</p>
 
 <p>
     @product.name@ is developed on top of the revolutionary
     <a href="http://wso2.com/products/carbon">WSO2 Carbon platform</a>,
-    an OSGi based framework that provides seamless modularity to your SOA via
-    componentization.</p>
+    an OSGi based framework that provides seamless modularity to your SOA solution via componentization.
+</p>
 
 <p>All the major features have been developed as pluggable Carbon components.</p>
 
@@ -51,9 +50,9 @@
     You can download this distribution from <a href="http://wso2.com/products/identity-server/">
     http://wso2.com/products/identity-server/</a>.</p>
 
-<p>The online documentation is available at
-    <a href="http://docs.wso2.org/wiki/display/IS510/WSO2+Identity+Server+Documentation">
-        http://docs.wso2.org/wiki/display/IS510/WSO2+Identity+Server+Documentation.</a></p>
+<p>Online documentation is available at
+    <a href="http://docs.wso2.org/wiki/display/IS530/WSO2+Identity+Server+Documentation">
+        http://docs.wso2.org/wiki/display/IS530/WSO2+Identity+Server+Documentation</a>.</p>
 
 <h2>How to Run </h2>
 <ol>
@@ -66,102 +65,109 @@
 </ol>
 <h2>New Features In This Release</h2>
 <ul>
-    <li>Workflow support for Identity Server</li>
-
-    <p>Engage workflows for any user/role operations carried out using WSO2 IS Management Console.
-        For example, when a new user gets registered with WSO2 IS, a workflow will automatically be triggered and
-        s/he will be assigned to a particular user role.</p>
-
-    <li>FIDO compliance</li>
-
-    <p>Fast Identity Online (FIDO) is a specification developed to reduce the reliance on password
-        for user authentication. The standard will enable any Web/cloud application to interface with a
-        variety of FIDO-enabled security devices.</p>
-
-    <li>Link multiple user accounts</li>
-
-    <p>In cases where users will have multiple entries in their respective user stores, to avoid requiring multiple
-        logins to an application to obtain a fully privileged view for a single user's details, we now support merging
-        of multiple user profiles.</p>
-
-    <li>PATCH operation support for SCIM 1.1</li>
-
-    <p>PUT supports the replace operation but not the update operation. Since group is a heavy resource, the
-        operation that alters without replacement (PATCH) needs to be implemented. If not each time a new user is
-        added to the group, all the users should be sent in the PUT request.</p>
-
-    <li>OpenID Connect Core 1.0 Compliance</li>
-
-    <p>The IS 5.0.0 had OpenID Support, however there were many points in the spec that were being violated.
-        Now that the specification is finalized we have made IS 5.3.0 OpenID Connect support specification
-        compliant. A major improvement this area is support for IDToken response type from the
-        OpenID Connect authorization endpoint.</p>
-
-    <li>Ability to notify external endpoints when changes are made to Identities</li>
-
-    <p>@product.name@ is now able to send invalidation notifications to external endpoints when there is a change in user
-        roles, permissions or attributes as well as clear the internal cache when user roles, permissions or attributes
-        been updated</p>
-
+    <li>Improved Identity Management Capabilities : Identity management features in @product.name@ @product.version@,
+        has been re-designed to provide strong out-of-the-box support for key identity management use cases, including password policies, login policies and account management policies. </li>
+    <ul>
+        <li>Password policies</li>
+        <ul>
+            <li>Password history validation (ability to keep track of user's old passwords). See
+                <a href="https://docs.wso2.com/display/IS530/Password+History+Validation">Password History Validation</a>.
+            </li>
+            <li>Password Patterns Configuration, See
+                <a href="https://docs.wso2.com/display/IS530/Password+Patterns">Password Patterns</a>
+            </li>
+        </ul>
+        <li>Login policies</li>
+        <ul>
+            <li>Google ReCaptcha support for single sign on. See
+                <a href="https://docs.wso2.com/display/IS530/Setting+Up+ReCaptcha">Setting Up ReCaptcha</a>.
+            </li>
+            <li>Account locking in single and multi-tenant environments. See
+                <a href="https://docs.wso2.com/display/IS530/User+Account+Locking+and+Account+Disabling">User Account Locking and Account Disabling</a>.
+            </li>
+        </ul>
+        <li>Account management policies. </li>
+        <ul>
+            <li>Account suspension reminders and locking idle accounts. See
+                <a href="https://docs.wso2.com/display/IS530/User+Account+Suspension">User Account Suspension</a>.
+            </li>
+            <li>Password and username recovery with challenge questions or notifications. We also support challenge questions internalization. See
+                <a href="https://docs.wso2.com/display/IS530/Password+Recovery">Password Recovery</a>.
+            </li>
+            <li>Password reset via admin. For more information, See
+                <a href="https://docs.wso2.com/display/IS530/Forced+Password+Reset">Forced Password Reset</a>.
+            </li>
+            <li>Google ReCaptcha support for password recovery flow and self sign up. See
+                <a href="https://docs.wso2.com/display/IS530/Setting+Up+ReCaptcha">Setting Up ReCaptcha</a>.
+            </li>
+        </ul>
+    </ul>
 </ul>
-
-<h2>Key Features of @product.name@</h2>
 <ul>
-    <li>Dynamically discovered federation</li>
-    <li>Identity Bridge - translation between heterogeneous Identity authentication protocols</li>
-    <li>SP Initiated and IDP Initiated SAML 2.0 Web Browser SSO provider</li>
-    <li>SAML2 Single Logout profile support</li>
-    <li>OpenID 2.0 Provider</li>
-    <li>OpenID Connect Authorization Server</li>
-    <li>Social login with Facebook, Google, Yahoo and Windows Live</li>
-    <li>XACML 3.0/2.0 based Entitlement Engine with WS-XACML support</li>
-    <li>OAuth 2.0/1.0a Authorization Server with OAuth 2.0/1.0a support</li>
-    <li>Inbound and Outbound Identity Provisioning with SCIM 1.1</li>
-    <li>Outbound Identity Provisioning with SPML 2.0, Salesforce and GoogleApps</li>
-    <li>Integrated Windows Authentication and webSEAL authentication</li>
-    <li>Multi-option and multi-step (multi-factor) authentication</li>
-    <li>Claim based Security Token Service(STS) with SAML 2.0/1.1 support.</li>
-    <li>Support for various types of User Stores such as JDBC, Cassandra, LDAP, Active Directory in Read/Write mode.
+    <ul>
+        <li>HTML support for email templates, template internalization and dynamic properties for email templates. See
+            <a href="https://docs.wso2.com/display/IS530/Customizing+Automated+Emails">Customizing Automated Emails</a>.
+        </li>
+        <li>Brute force attack prevention. See
+            <a href="https://docs.wso2.com/display/IS530/Mitigating+Brute+Force+Attacks">Mitigating Brute Force Attacks</a>.
+        </li>
+    </ul>
+    <li>Login session monitoring and termination: WSO2 IS now supports monitoring user sessions and authentication activities via alerts, and manual termination of user sessions for better security. See
+        <a href="https://docs.wso2.com/display/IS530/Terminating+User+Sessions">Terminating User Sessions</a>.
     </li>
-    <li>Claim Management</li>
-    <li>User Profiles and Profile Management</li>
-    <li>Separable front-end and back-end - a single front-end server can be used to administer several back-endservers</li>
-    <li>Identity Bridge</li>
-    <li>Multi-option and multi-step authentication</li>
-    <li> Request Path Authenticators.</li>
-    <li>Social Login with Facebook / Google / Microsoft Windows Live.</li>
-    <li>Ability to plug-in custom developed authenticators.</li>
-    <li>Provisioning Bridge.</li>
-    <li>Just-in-time provisioning.</li>
-    <li>Ability to plug-in custom developed provisioning connectors.</li>
-    <li>User Dashboard.</li>
-    <li>SAML2 Web SSO profile Request / Response validator.</li>
-    <li>Remote User Store Management.</li>
-    <li>Custom permissions.</li>
-    <li>Encrypted SAML2 Assertions.</li>
-    <li>NTLM grant type for OAuth 2.0</li>
-    <li>Workflows for user management operations</li>
-    <li>2 factor authentication with FIDO</li>
-    <li>Linking 2 or more local/federated user accounts</li>
+    <li>Rule based provisioning: WSO2 IS @product.version@ has the ability to adopt provision flows based on rules. These rules can be based on entities related to an event such as user, idp, sp &nbsp;as well as environmental factors like time and region.</li>
+    <li>Prompt for missing predefined required attributes in the authentication flow: The user will be prompted to fill the missing attributes or claim values, in the event of &nbsp;a missing mandatory claim &nbsp;at the point of login. See
+        <a href="https://docs.wso2.com/display/IS530/Configuring+Claims+for+a+Service+Provider">Configuring Claims for a Service Provider</a>.
+    </li>
+    <li>OAuth 2.0/OpenID Connect Enhancements: Following OpenID Connect specifications were implemented to enrich the OpenID connect support in Identity Server.</li>
+    <ul>
+        <li>OpenID Connect Dynamic Client Registration. See
+            <a href="https://docs.wso2.com/display/IS530/OpenID+Connect+Dynamic+Client+Registration">OpenID Connect Dynamic Client Registration</a>.
+        </li>
+        <li>Token Introspection. See
+            <a href="https://docs.wso2.com/display/IS530/Invoke+the+OAuth+Introspection+Endpoint">Invoke the OAuth Introspection Endpoint</a>.
+        </li>
+        <li>OpenID Connect Discovery support. See the
+            <a href="https://openid.net/specs/openid-connect-discovery-1_0.html#IssuerDiscovery">OpenID Connect specification</a>.
+        </li>
+    </ul>
+    <li>OAuth 2.0 client secret revocation and regeneration : See
+        <a href="https://docs.wso2.com/display/IS530/Configuring+OAuth2-OpenID+Connect+Single-Sign-On">OAuth2 /OpenID connect configurations</a>
+    </li>
+    <li>REST profile of XACML. With IS @product.version@, we have added a REST layer on top of the Balana entitlement engine. See
+        <a href="https://docs.wso2.com/display/IS530/Entitlement+with+APIs">Entitlement with APIs</a>.
+    </li>
+    <li>SAML 2.0 Enhancements: Identity server @product.version@ added following specification support to its SAML feature list.</li>
+    <ul>
+        <li>SAML 2.0 Metadata Profile. </li>
+        <li>SAML 2.0 Assertion Query/Request Profile &nbsp;</li>
+    </ul>
+    <li>Security Analytics: WSO2 IS now detects and provides alerting capability for abnormal and suspicious login sessions. See
+        <a href="https://docs.wso2.com/display/IS530/Managing+Alerts">Managing Alerts</a>.
+    </li>
 </ul>
-<h2>Issues Fixed in This Release</h2>
-
-<p>
-    This release of WSO2 Identity Server comes with a number of bug fixes, both in the base Carbon
-    framework and in the Identity Server specific components. All the issues which have been
-    fixed in this release can be found at:
-</p>
 <ul>
-    <li><a href="https://wso2.org/jira/issues/?filter=13612">Fixed Issues for WSO2 Identity Server 5.3.0</a></li>
+    <li>SCIM 1.0 Enhancements : SCIM provisioning API improved to support attribute query.</li>
+    <li>Engage access control policies in authentication flow : With WSO2 IS @product.version@ it's possible to evaluate access control policies against an authenticated user in authentication flow.</li>
+    <li>Integrated Windows Authentication (IWA) for IS deployed on Linux servers : With this improvement we enable IS deployed on Linux servers to achieve IWA with external Kerberos/NTLM Servers. See
+        <a href="https://docs.wso2.com/display/IS530/Configuring+IWA+on+Linux">Configure IWA on Linux</a>
+    </li>
+    <li>Claim Management Improvement: With this release we relieve the user from the painstaking task of having map claims from one dialect to another indirectly by manipulating mapped attributes. From IS @product.version@, users can easily map claims from two dialects directly without worrying about mapped attributes.</li>
+    <li>Identity Management REST APIs : New RESTful interfaces to connect with account registration and recovery flows have been introduced with IS @product.version@.</li>
 </ul>
+
 <h2>Known Issues</h2>
+<p>All the open issues pertaining to @product.name@ are reported at the following locations:</p>
 
-<p>
-    All the known issues in WSO2 Identity Server 5.3.0 are reported at:
-</p>
 <ul>
-    <li><a href="https://wso2.org/jira/issues/?filter=13613">Known issues in WSO2 Identity Server 5.3.0</a></li>
+    <li>
+        <a href="https://wso2.org/jira/issues/?filter=13613">IS Runtime</a>
+    </li>
+    <li>
+        <a href="https://wso2.org/jira/issues/?filter=13615">IS Analytics</a>
+    </li>
 </ul>
+
 <h2>How You Can Contribute</h2>
 
 <h3>
@@ -181,13 +187,14 @@
         User forum : <a href="http://stackoverflow.com/questions/tagged/wso2">StackOverflow</a>
     </li>
 </ul>
+
 <h3>
     Reporting Issues
 </h3>
 
 <p>
-    We encourage you to report issues, documentation faults and feature requests regarding
-    WSO2 Identity Server or in the Carbon base framework through the public
+    We encourage you to report issues, documentation faults and feature requests regarding @product.name@ or in
+    the Carbon base framework through the public
     <a href="https://wso2.org/jira/browse/IDENTITY">@product.name@ JIRA</a> or <a
         href="http://www.wso2.org/jira/browse/CARBON">Carbon JIRA</a>.
 </p>
@@ -195,23 +202,23 @@
 <h2>Support</h2>
 
 <p>
-    We are committed to ensuring that your enterprise middleware deployment is completely supported
-    from evaluation to
-    production. Our unique approach ensures that all support leverages our open development
-    methodology and is provided by
-    the very same engineers who build the technology.
+    We are committed to ensure your enterprise middleware deployment is completely supported from evaluation
+    to production. Our unique approach ensures that all support leverages our open development methodology and is
+    provided by the very same engineers who build the technology.
 
     For more details and to take advantage of this unique opportunity
     <a target="_blank" href="http://wso2.com/support/">
         http://wso2.com/support/</a>
 </p>
 
-<p>For more information about WSO2 Identity Server, please see <a
+<p>For more information about @product.name@, please see <a
         href="http://wso2.com/products/identity-server">http://wso2.com/products/identity-server</a> or visit
     the <a href="http://wso2.org/library">WSO2 Oxygen Tank</a> developer portal for additional resources.</p>
 
 <p>Thank you for your interest in @product.name@.</p>
 
 <p>Copyright WSO2 Inc.</p>
+
+<h4>The @product.name@ Team</h4>
 </body>
 </html>
