Adding missed oauth form post response feature in readme files

--- a/release-notes.html
+++ b/release-notes.html
@@ -130,6 +130,8 @@
         <li>OpenID Connect Discovery support. See the
             <a href="https://openid.net/specs/openid-connect-discovery-1_0.html#IssuerDiscovery">OpenID Connect specification</a>.
         </li>
+        <li>OAuth 2.0 Form Post Response Mode. See the <a
+                href="http://openid.net/specs/oauth-v2-form-post-response-mode-1_0.html">specification</a></li>
     </ul>
     <li>OAuth 2.0 client secret revocation and regeneration : See
         <a href="https://docs.wso2.com/display/IS530/Configuring+OAuth2-OpenID+Connect+Single-Sign-On">OAuth2 /OpenID connect configurations</a>
